--- a/generator.ipynb
+++ b/generator.ipynb
@@ -167,6 +167,82 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MyClass:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "    def greet(self):\n",
+    "        return f\"Hello, {self.name}!\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Parent:\n",
+    "    def greet(self):\n",
+    "        print(\"Hello from the parent\")\n",
+    "\n",
+    "class Child(Parent):\n",
+    "    def greet(self):\n",
+    "        super().greet()\n",
+    "        print(\"Hello from the child\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle ##seriaize and deserialize\n",
+    "\n",
+    "# Serialize\n",
+    "data = {'key': 'value'}\n",
+    "with open('data.pkl', 'wb') as f:\n",
+    "    pickle.dump(data, f)\n",
+    "\n",
+    "# Deserialize\n",
+    "with open('data.pkl', 'rb') as f:\n",
+    "    data = pickle.load(f)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def my_function(*args, **kwargs):\n",
+    "    print(args)\n",
+    "    print(kwargs)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "()\n",
+      "{}\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_function()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
