This was updated on 11/1/2024 from pc

--- a/NLP/stemming.ipynb
+++ b/NLP/stemming.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "### Stemming\n",
-    "It is a process of reducing a word to its word stem the affixes to suffixes and prefixes or the roots of the words known as lemma. Stemming is important is natural language understanding (NLU) and natural language processing (NLP)."
+    "It is a process of reducing a word to its word stem that affixes to suffixes and prefixes or the roots of the words known as lemma. Stemming is important is natural language understanding (NLU) and natural language processing (NLP)."
    ]
   },
   {
@@ -113,6 +113,176 @@
    ],
    "source": [
     "stemming.stem('talking')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### RegexpStemmer class\n",
+    "\n",
+    "NLTK has RegexpStemmer class with the help of which we can easily implement Regular Expression Stemmer algotithms. It basically takes a single regular expression and removes any prefix of suffix that matches the expression. Let us see an example."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.stem import RegexpStemmer\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reg_stemmer = RegexpStemmer('ing$|s$|e$|able$',min=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'eat'"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reg_stemmer.stem('eating')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ingeat'"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reg_stemmer.stem('ingeating')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SnowBall Stemmer\n",
+    "\n",
+    "It performs better than porter stemmer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.stem import SnowballStemmer\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "snowball_en = SnowballStemmer('english')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "words = ['eating','eaten','eats','writing','writes','programming','programs','history','finally','finalized']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "eating---->eat\n",
+      "eaten---->eaten\n",
+      "eats---->eat\n",
+      "writing---->write\n",
+      "writes---->write\n",
+      "programming---->program\n",
+      "programs---->program\n",
+      "history---->histori\n",
+      "finally---->final\n",
+      "finalized---->final\n"
+     ]
+    }
+   ],
+   "source": [
+    "for word in words:\n",
+    "    print(word+'---->'+snowball_en.stem(word))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('fairli', 'sportingli')"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stemming.stem('fairly'),stemming.stem('sportingly')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('fair', 'sport')"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "snowball_en.stem('fairly'),snowball_en.stem('sportingly')"
    ]
   },
   {
