This was updated on 11/1/2024 from pc

--- a/NLP/stemming.ipynb
+++ b/NLP/stemming.ipynb
@@ -197,7 +197,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from nltk.stem import SnowballStemmer\n"
+    "from nltk.stem import SnowballStemmer"
    ]
   },
   {
