This was added on 20/11/2024

--- a/Doc Summarizer/doc_sum.ipynb
+++ b/Doc Summarizer/doc_sum.ipynb
@@ -369,6 +369,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Storing the document summary index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "summary_index.storage_context.persist(\"doc_sum_index\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
